--- a/trackvisualizer/App.xaml
+++ b/trackvisualizer/App.xaml
@@ -7,5 +7,21 @@
         <view:DimensionConverter x:Key="DimensionConverter"/>
         <SolidColorBrush x:Key="ValidationBadColor" Color="#6F1010"/>
         <SolidColorBrush x:Key="ValidationBadColorInverse" Color="White"/>
+        
+        <Style TargetType="ButtonBase" x:Key="BasicButtonStyle">
+            <Setter Property="Margin" Value="{StaticResource ControlMargin}"/>
+            <Setter Property="Padding" Value="{StaticResource ControlMargin}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="BasicComboBoxStyle" TargetType="ComboBox">
+            <Setter Property="Margin" Value="{StaticResource ControlMargin}"/>
+            <Setter Property="Padding" Value="{StaticResource ControlMargin}"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        
+        <SolidColorBrush x:Key="AccentColor" Color="SteelBlue"/>
+        <SolidColorBrush x:Key="BackgroundColor" Color="White"/>
+        
+
     </Application.Resources>
 </Application>
