--- a/trackvisualizer/View/MainWindow.xaml
+++ b/trackvisualizer/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="trackvisualizer.View.TrackView"
+﻿<Window x:Class="trackvisualizer.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -66,16 +66,22 @@
         <Grid Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <TextBlock Margin="{StaticResource ControlMargin}" Grid.Column="0" Text="Загрузить трек"
                        VerticalAlignment="Center" />
 
+            <!-- load from file -->
+            <TextBlock Margin="{StaticResource ControlMargin}" Grid.Column="1" Text="Загрузка..."
+                       Background="{StaticResource AccentColor}"
+                       Foreground="{StaticResource BackgroundColor}"
+                       view:VisibilityAux.IsVisible="{Binding IsLoading}" VerticalAlignment="Center" />
+
             <!-- recently used tracks selector -->
-            <ComboBox Grid.Column="1" Margin="{StaticResource ControlMargin}" ItemsSource="{Binding AvailableTracks}"
+            <ComboBox Grid.Column="2" Style="{StaticResource BasicComboBoxStyle}" ItemsSource="{Binding AvailableTracks}"
                       SelectedItem="{Binding ActiveTrack}" IsSynchronizedWithCurrentItem="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate DataType="{x:Type vm:TrackVm}">
@@ -85,12 +91,9 @@
             </ComboBox>
 
             <!-- load from file -->
-            <Button Margin="{StaticResource ControlMargin}" Grid.Column="2" Content="Load"
+            <Button Style="{StaticResource BasicButtonStyle}" Grid.Column="3" Content="Загрузить"
                     Command="{Binding LoadFromFileCommand}" />
 
-            <!-- load from file -->
-            <TextBlock Margin="{StaticResource ControlMargin}" Grid.Column="3" Text="Loading..."
-                       view:VisibilityAux.IsVisible="{Binding IsLoading}" VerticalAlignment="Center" />
         </Grid>
 
         <!-- Report data -->
