--- a/trackvisualizer/View/Error.xaml
+++ b/trackvisualizer/View/Error.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="trackvisualizer.View.Error"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Ошибка" Height="Auto" Width="Auto" AllowsTransparency="True" Background="#90000000" WindowStyle="None"
+        Title="Ошибка" Height="Auto" Width="Auto" 
+        AllowsTransparency="True" Background="#90000000" WindowStyle="None"
         WindowState="Maximized"
         FontSize="19" Topmost="True">
     <Border BorderBrush="Black" BorderThickness="1" Width="550" Height="300" SnapsToDevicePixels="True"
